errores con las direcciones de imagenes arreglado

--- a/alexandro.html
+++ b/alexandro.html
@@ -25,44 +25,44 @@
     </header>
     <main class="pd__section">
       <section class="principal">
-        <figure class="principal__image"><img src="../assets/images/users/alexandro/alexandro.jpg" alt="alt"/></figure>
+        <figure class="principal__image"><img src="assets/images/users/alexandro/alexandro.jpg" alt="alt"/></figure>
         <h1 class="principal__title">Alexandro</h1><a class="subtitle__card--perfil" href="https://www.instagram.com/pieroj_02/" target="_blank">pieroj_02</a>
         <p class="principal__quote">Ala, ya es tarde!</p><span class="principal__date">01/01/21</span>
       </section>
       <section class="stickers">
         <h2 class="section__title title__flex">Stickers</h2>
         <div class="stickers__content">
-          <figure class="stickers__item"><img src="../assets/images/users/alexandro/stickers/st1.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/alexandro/stickers/st2.webp" alt="alt"/></figure>
-          <figure class="stickers__item"> <img src="../assets/images/users/alexandro/stickers/st3.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/alexandro/stickers/st4.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/alexandro/stickers/st5.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/alexandro/stickers/st1.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/alexandro/stickers/st2.webp" alt="alt"/></figure>
+          <figure class="stickers__item"> <img src="assets/images/users/alexandro/stickers/st3.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/alexandro/stickers/st4.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/alexandro/stickers/st5.webp" alt="alt"/></figure>
         </div>
       </section>
       <section class="photos">
         <h2 class="section__title title__flex">Fotos</h2>
         <div class="photos__content">
-          <figure class="photos__item"><img src="../assets/images/users/alexandro/fotos/ft1.jpg" alt="alt"/></figure>
-          <figure class="photos__item"><img src="../assets/images/users/alexandro/fotos/ft2.jpg" alt="alt"/></figure>
-          <figure class="photos__item"><img src="../assets/images/users/alexandro/fotos/ft3.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/alexandro/fotos/ft1.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/alexandro/fotos/ft2.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/alexandro/fotos/ft3.jpg" alt="alt"/></figure>
         </div>
       </section>
       <section class="songs section__grid">
         <h2 class="section__title title__flex">Canciones</h2>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/alexandro/canciones/cn1.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/alexandro/canciones/cn1.jpg" alt="alt"/></figure>
           <h3 class="song__title">Take Me For A Ride</h3><span class="song__artist">Holy Oysters</span><span class="song__time">3:44 min</span><a class="song__link" href="https://www.youtube.com/watch?v=z1Qj4aYaODU" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/alexandro/canciones/cn2.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/alexandro/canciones/cn2.jpg" alt="alt"/></figure>
           <h3 class="song__title">Dreamers</h3><span class="song__artist">Savoir Adore</span><span class="song__time">4:17 min</span><a class="song__link" href="https://www.youtube.com/watch?v=qH4ryqWze6U" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/alexandro/canciones/cn3.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/alexandro/canciones/cn3.jpg" alt="alt"/></figure>
           <h3 class="song__title">More Than a Woman</h3><span class="song__artist">Bee Gees</span><span class="song__time">3:17 min</span><a class="song__link" href="https://www.youtube.com/watch?v=EOP-xCzLrIM" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/alexandro/canciones/cn4.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/alexandro/canciones/cn4.jpg" alt="alt"/></figure>
           <h3 class="song__title">Time Leap</h3><span class="song__artist">Aero Chord</span><span class="song__time">3:40 min</span><a class="song__link" href="https://www.youtube.com/watch?v=CFPLIaMpGrY" target="_blank"><span class="song__icon"></span></a>
         </article>
       </section>
