--- a/andrea.html
+++ b/andrea.html
@@ -25,44 +25,44 @@
     </header>
     <main class="pd__section">
       <section class="principal">
-        <figure class="principal__image"><img src="../assets/images/users/andrea/andrea.jpg" alt="alt"/></figure>
+        <figure class="principal__image"><img src="assets/images/users/andrea/andrea.jpg" alt="alt"/></figure>
         <h1 class="principal__title">Andrea</h1><a class="subtitle__card--perfil" href="https://www.instagram.com/palomino.dev/" target="_blank">andreadelacruz_26</a>
         <p class="principal__quote">Ahi no, eso si jamasssss</p><span class="principal__date">26/09/15</span>
       </section>
       <section class="stickers">
         <h2 class="section__title title__flex">Stickers</h2>
         <div class="stickers__content">
-          <figure class="stickers__item"><img src="../assets/images/users/andrea/stickers/st1.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/andrea/stickers/st2.webp" alt="alt"/></figure>
-          <figure class="stickers__item"> <img src="../assets/images/users/andrea/stickers/st3.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/andrea/stickers/st4.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/andrea/stickers/st5.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/andrea/stickers/st1.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/andrea/stickers/st2.webp" alt="alt"/></figure>
+          <figure class="stickers__item"> <img src="assets/images/users/andrea/stickers/st3.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/andrea/stickers/st4.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/andrea/stickers/st5.webp" alt="alt"/></figure>
         </div>
       </section>
       <section class="photos">
         <h2 class="section__title title__flex">Fotos</h2>
         <div class="photos__content">
-          <figure class="photos__item"><img src="../assets/images/users/andrea/fotos/ft1.jpg" alt="alt"/></figure>
-          <figure class="photos__item"><img src="../assets/images/users/andrea/fotos/ft2.jpg" alt="alt"/></figure>
-          <figure class="photos__item"><img src="../assets/images/users/andrea/fotos/ft3.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/andrea/fotos/ft1.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/andrea/fotos/ft2.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/andrea/fotos/ft3.jpg" alt="alt"/></figure>
         </div>
       </section>
       <section class="songs section__grid">
         <h2 class="section__title title__flex">Canciones</h2>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/andrea/canciones/cn1.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/andrea/canciones/cn1.jpg" alt="alt"/></figure>
           <h3 class="song__title">Beggin'</h3><span class="song__artist">Måneskin</span><span class="song__time">3:48 min</span><a class="song__link" href="https://www.youtube.com/watch?v=GXVEDZjYzUk" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/andrea/canciones/cn2.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/andrea/canciones/cn2.jpg" alt="alt"/></figure>
           <h3 class="song__title">Hymn For The Weekend</h3><span class="song__artist">Coldplay</span><span class="song__time">4:20 min</span><a class="song__link" href="https://www.youtube.com/watch?v=YykjpeuMNEk" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/andrea/canciones/cn3.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/andrea/canciones/cn3.jpg" alt="alt"/></figure>
           <h3 class="song__title">Saturno</h3><span class="song__artist">Pablo Alborán</span><span class="song__time">4:13 min</span><a class="song__link" href="https://www.youtube.com/watch?v=yBAx5nBdJqU" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/andrea/canciones/cn4.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/andrea/canciones/cn4.jpg" alt="alt"/></figure>
           <h3 class="song__title">Billie Jean</h3><span class="song__artist">Michael Jackson</span><span class="song__time">4:55 min</span><a class="song__link" href="https://www.youtube.com/watch?v=Zi_XLOBDo_Y" target="_blank"><span class="song__icon"></span></a>
         </article>
       </section>
