--- a/blog1.html
+++ b/blog1.html
@@ -55,7 +55,7 @@
           </article>
           <aside class="aside"> 
             <article class="tarjeta">
-              <figure class="tarjeta__imagen"><img src="../assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
+              <figure class="tarjeta__imagen"><img src="assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
               <h3 class="title__card">Jeremyispapo</h3><a class="subtitle__card" href="https://www.instagram.com/palomino.dev">@palomino.dev</a><a class="button__link--user" href="jeremy.html">Ver Perfil</a>
             </article>
           </aside>
