--- a/blog4.html
+++ b/blog4.html
@@ -45,7 +45,7 @@
           </article>
           <aside class="aside"> 
             <article class="tarjeta">
-              <figure class="tarjeta__imagen"><img src="../assets/images/users/kiara/kiara.jpg" alt="alt"/></figure>
+              <figure class="tarjeta__imagen"><img src="assets/images/users/kiara/kiara.jpg" alt="alt"/></figure>
               <h3 class="title__card">Kiara</h3><a class="subtitle__card" href="https://www.instagram.com/kiara.sadith">@kiara.sadith</a><a class="button__link--user" href="kiara.html">Ver Perfil</a>
             </article>
           </aside>
