--- a/adhrian.html
+++ b/adhrian.html
@@ -25,44 +25,44 @@
     </header>
     <main class="pd__section">
       <section class="principal">
-        <figure class="principal__image"><img src="../assets/images/users/adhrian/adhrian.jpg" alt="alt"/></figure>
+        <figure class="principal__image"><img src="assets/images/users/adhrian/adhrian.jpg" alt="alt"/></figure>
         <h1 class="principal__title">Adhrian</h1><a class="subtitle__card--perfil" href="https://www.instagram.com/adrh023/" target="_blank">adrh023</a>
         <p class="principal__quote">No pes</p><span class="principal__date">22/02/14</span>
       </section>
       <section class="stickers">
         <h2 class="section__title title__flex">Stickers</h2>
         <div class="stickers__content">
-          <figure class="stickers__item"><img src="../assets/images/users/adhrian/stickers/st1.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/adhrian/stickers/st2.webp" alt="alt"/></figure>
-          <figure class="stickers__item"> <img src="../assets/images/users/adhrian/stickers/st3.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/adhrian/stickers/st4.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/adhrian/stickers/st5.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/adhrian/stickers/st1.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/adhrian/stickers/st2.webp" alt="alt"/></figure>
+          <figure class="stickers__item"> <img src="assets/images/users/adhrian/stickers/st3.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/adhrian/stickers/st4.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/adhrian/stickers/st5.webp" alt="alt"/></figure>
         </div>
       </section>
       <section class="photos">
         <h2 class="section__title title__flex">Fotos</h2>
         <div class="photos__content">
-          <figure class="photos__item"><img src="../assets/images/users/adhrian/fotos/ft1.jpg" alt="alt"/></figure>
-          <figure class="photos__item"><img src="../assets/images/users/adhrian/fotos/ft2.jpg" alt="alt"/></figure>
-          <figure class="photos__item"><img src="../assets/images/users/adhrian/fotos/ft3.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/adhrian/fotos/ft1.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/adhrian/fotos/ft2.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/adhrian/fotos/ft3.jpg" alt="alt"/></figure>
         </div>
       </section>
       <section class="songs section__grid">
         <h2 class="section__title title__flex">Canciones</h2>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/adhrian/canciones/cn1.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/adhrian/canciones/cn1.jpg" alt="alt"/></figure>
           <h3 class="song__title">In my place</h3><span class="song__artist">Coldplay</span><span class="song__time">3:46 min</span><a class="song__link" href="https://www.youtube.com/watch?v=gnIZ7RMuLpU" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/adhrian/canciones/cn2.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/adhrian/canciones/cn2.jpg" alt="alt"/></figure>
           <h3 class="song__title">Tear in My Heart</h3><span class="song__artist">Twenty One Pilots</span><span class="song__time">3:13 min</span><a class="song__link" href="https://www.youtube.com/watch?v=nky4me4NP70" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/adhrian/canciones/cn3.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/adhrian/canciones/cn3.jpg" alt="alt"/></figure>
           <h3 class="song__title">LA Devotee</h3><span class="song__artist">P!ATD</span><span class="song__time">4:04 min</span><a class="song__link" href="https://www.youtube.com/watch?v=r5dNcKTcnPA" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/adhrian/canciones/cn4.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/adhrian/canciones/cn4.jpg" alt="alt"/></figure>
           <h3 class="song__title">Prófugos</h3><span class="song__artist">Soda Esterio</span><span class="song__time">5:20 min</span><a class="song__link" href="https://www.youtube.com/watch?v=lGptyREttJ4" target="_blank"><span class="song__icon"></span></a>
         </article>
       </section>
