--- a/blog3.html
+++ b/blog3.html
@@ -45,7 +45,7 @@
           </article>
           <aside class="aside"> 
             <article class="tarjeta">
-              <figure class="tarjeta__imagen"><img src="../assets/images/users/andrea/andrea.jpg" alt="alt"/></figure>
+              <figure class="tarjeta__imagen"><img src="assets/images/users/andrea/andrea.jpg" alt="alt"/></figure>
               <h3 class="title__card">Andrea</h3><a class="subtitle__card" href="https://www.instagram.com/andreadelacruz_26">@andreadelacruz_26</a><a class="button__link--user" href="andrea.html">Ver Perfil</a>
             </article>
           </aside>
