--- a/kiara.html
+++ b/kiara.html
@@ -25,44 +25,44 @@
     </header>
     <main class="pd__section">
       <section class="principal">
-        <figure class="principal__image"><img src="../assets/images/users/Kiara/kiara.jpg" alt="alt"/></figure>
+        <figure class="principal__image"><img src="assets/images/users/Kiara/kiara.jpg" alt="alt"/></figure>
         <h1 class="principal__title">Kiara</h1><a class="subtitle__card--perfil" href="https://www.instagram.com/kiara.sadith/" target="_blank">kiara.sadith</a>
         <p class="principal__quote">Ay esque nose we 😎🤡</p><span class="principal__date">30/03/21</span>
       </section>
       <section class="stickers">
         <h2 class="section__title title__flex">Stickers</h2>
         <div class="stickers__content">
-          <figure class="stickers__item"><img src="../assets/images/users/kiara/stickers/st1.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/kiara/stickers/st2.webp" alt="alt"/></figure>
-          <figure class="stickers__item"> <img src="../assets/images/users/kiara/stickers/st3.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/kiara/stickers/st4.webp" alt="alt"/></figure>
-          <figure class="stickers__item"><img src="../assets/images/users/kiara/stickers/st5.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/kiara/stickers/st1.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/kiara/stickers/st2.webp" alt="alt"/></figure>
+          <figure class="stickers__item"> <img src="assets/images/users/kiara/stickers/st3.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/kiara/stickers/st4.webp" alt="alt"/></figure>
+          <figure class="stickers__item"><img src="assets/images/users/kiara/stickers/st5.webp" alt="alt"/></figure>
         </div>
       </section>
       <section class="photos">
         <h2 class="section__title title__flex">Fotos</h2>
         <div class="photos__content">
-          <figure class="photos__item"><img src="../assets/images/users/kiara/fotos/ft1.jpg" alt="alt"/></figure>
-          <figure class="photos__item"><img src="../assets/images/users/kiara/fotos/ft2.jpg" alt="alt"/></figure>
-          <figure class="photos__item"><img src="../assets/images/users/kiara/fotos/ft3.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/kiara/fotos/ft1.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/kiara/fotos/ft2.jpg" alt="alt"/></figure>
+          <figure class="photos__item"><img src="assets/images/users/kiara/fotos/ft3.jpg" alt="alt"/></figure>
         </div>
       </section>
       <section class="songs section__grid">
         <h2 class="section__title title__flex">Canciones</h2>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/kiara/canciones/cn1.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/kiara/canciones/cn1.jpg" alt="alt"/></figure>
           <h3 class="song__title">It Will Rain</h3><span class="song__artist">Bruno Mars</span><span class="song__time">4:26 min</span><a class="song__link" href="https://www.youtube.com/watch?v=W-w3WfgpcGg" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/kiara/canciones/cn2.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/kiara/canciones/cn2.jpg" alt="alt"/></figure>
           <h3 class="song__title">Soñe Contigo</h3><span class="song__artist">Caztro</span><span class="song__time">3:12 min</span><a class="song__link" href="https://www.youtube.com/watch?v=gZX7lZuKcZI" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/kiara/canciones/cn3.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/kiara/canciones/cn3.jpg" alt="alt"/></figure>
           <h3 class="song__title">Como una obra de Arte</h3><span class="song__artist">Caztro</span><span class="song__time">2:43 min</span><a class="song__link" href="https://www.youtube.com/watch?v=6hgnmXAGoVw" target="_blank"><span class="song__icon"></span></a>
         </article>
         <article class="song">
-          <figure class="song__img"><img src="../assets/images/users/kiara/canciones/cn4.jpg" alt="alt"/></figure>
+          <figure class="song__img"><img src="assets/images/users/kiara/canciones/cn4.jpg" alt="alt"/></figure>
           <h3 class="song__title">Bajo el agua</h3><span class="song__artist">Manuel Medrano</span><span class="song__time">3:50 min</span><a class="song__link" href="https://www.youtube.com/watch?v=zLX_GcXt2pI" target="_blank"><span class="song__icon"></span></a>
         </article>
       </section>
