--- a/blogs.html
+++ b/blogs.html
@@ -27,27 +27,27 @@
       <section class="pd__section">
         <h1 class="section__title">Lista de Blogs</h1>
         <div class="section__grid"><a class="caja" href="blog1.html">
-            <figure class="caja__imagen"><img src="../assets/images/anuncios_blog/blog1.png" alt="foto del articulo:blog1.png"/></figure>
+            <figure class="caja__imagen"><img src="assets/images/anuncios_blog/blog1.png" alt="foto del articulo:blog1.png"/></figure>
             <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="../assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
+              <figure class="caja__usuario"><img src="assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
               <h3 class="title__card">Bienvenido a Cerro House</h3>
               <p>No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...</p>
             </div></a><a class="caja" href="blog2.html">
-            <figure class="caja__imagen"><img src="../assets/images/anuncios_blog/blog2.jpg" alt="foto del articulo:blog2.jpg"/></figure>
+            <figure class="caja__imagen"><img src="assets/images/anuncios_blog/blog2.jpg" alt="foto del articulo:blog2.jpg"/></figure>
             <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="../assets/images/users/andrea/andrea.jpg" alt="alt"/></figure>
+              <figure class="caja__usuario"><img src="assets/images/users/andrea/andrea.jpg" alt="alt"/></figure>
               <h3 class="title__card">!!Yo elijo dónde me gustaría vivir!!</h3>
               <p>Me gustaría vivir en Corea del Sur , por qué se habla muy bonito de ese lugar aparte de su comida .</p>
             </div></a><a class="caja" href="blog3.html">
-            <figure class="caja__imagen"><img src="../assets/images/anuncios_blog/blog3.jpg" alt="foto del articulo:blog3.jpg"/></figure>
+            <figure class="caja__imagen"><img src="assets/images/anuncios_blog/blog3.jpg" alt="foto del articulo:blog3.jpg"/></figure>
             <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="../assets/images/users/andrea/andrea.jpg" alt="alt"/></figure>
+              <figure class="caja__usuario"><img src="assets/images/users/andrea/andrea.jpg" alt="alt"/></figure>
               <h3 class="title__card">Yo elijo mi don 🦸🏻‍♀️</h3>
               <p>Bueno manos si se me concidera , poder tener un don sería el de leer mentes .</p>
             </div></a><a class="caja" href="blog4.html">
-            <figure class="caja__imagen"><img src="../assets/images/anuncios_blog/blog4.jpg" alt="foto del articulo:blog4.jpg"/></figure>
+            <figure class="caja__imagen"><img src="assets/images/anuncios_blog/blog4.jpg" alt="foto del articulo:blog4.jpg"/></figure>
             <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="../assets/images/users/kiara/kiara.jpg" alt="alt"/></figure>
+              <figure class="caja__usuario"><img src="assets/images/users/kiara/kiara.jpg" alt="alt"/></figure>
               <h3 class="title__card">Story time de viejes 😳</h3>
               <p>Weno me presento soy kiArA, hablare de algunos sucesos que me pasaron de algunos viajes que paso...</p>
             </div></a>
