--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <section class="pd__section">
         <h2 class="section__title">Anuncios</h2>
         <div class="section__grid"><a class="caja" href="blog1.html">
-            <figure class="caja__imagen"><img src="../assets/images/anuncios_blog/blog1.png" alt="foto del articulo:blog1.png"/></figure>
+            <figure class="caja__imagen"><img src="assets/images/anuncios_blog/blog1.png" alt="foto del articulo:blog1.png"/></figure>
             <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="../assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
+              <figure class="caja__usuario"><img src="assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
               <h3 class="title__card">Bienvenido a Cerro House</h3>
               <p>No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...</p>
             </div></a>
