--- a/participantes.html
+++ b/participantes.html
@@ -28,27 +28,27 @@
         <h1 class="section__title">Participantes</h1>
         <section class="section__grid">
           <article class="tarjeta">
-            <figure class="tarjeta__imagen"><img src="../assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
+            <figure class="tarjeta__imagen"><img src="assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
             <h3 class="title__card">Jeremyispapo</h3><a class="subtitle__card" href="https://www.instagram.com/palomino.dev">@palomino.dev</a><a class="button__link--user" href="jeremy.html">Ver Perfil</a>
           </article>
           <article class="tarjeta">
-            <figure class="tarjeta__imagen"><img src="../assets/images/users/andrea/andrea.jpg" alt="alt"/></figure>
-            <h3 class="title__card">Andrea</h3><a class="subtitle__card" href="https://www.instagram.com/andreadelacruz_26">@andreadelacruz_26</a><a class="button__link--user" href="andrea.html">Ver Perfil</a>
-          </article>
-          <article class="tarjeta">
-            <figure class="tarjeta__imagen"><img src="../assets/images/users/kiara/kiara.jpg" alt="alt"/></figure>
+            <figure class="tarjeta__imagen"><img src="assets/images/users/kiara/kiara.jpg" alt="alt"/></figure>
             <h3 class="title__card">Kiara</h3><a class="subtitle__card" href="https://www.instagram.com/kiara.sadith">@kiara.sadith</a><a class="button__link--user" href="kiara.html">Ver Perfil</a>
           </article>
           <article class="tarjeta">
-            <figure class="tarjeta__imagen"><img src="../assets/images/users/alexandro/alexandro.jpg" alt="alt"/></figure>
+            <figure class="tarjeta__imagen"><img src="assets/images/users/andrea/andrea.jpg" alt="alt"/></figure>
+            <h3 class="title__card">Andrea</h3><a class="subtitle__card" href="https://www.instagram.com/andreadelacruz_26">@andreadelacruz_26</a><a class="button__link--user" href="andrea.html">Ver Perfil</a>
+          </article>
+          <article class="tarjeta">
+            <figure class="tarjeta__imagen"><img src="assets/images/users/alexandro/alexandro.jpg" alt="alt"/></figure>
             <h3 class="title__card">Alexandro</h3><a class="subtitle__card" href="https://www.instagram.com/pieroj_02">@pieroj_02</a><a class="button__link--user" href="alexandro.html">Ver Perfil</a>
           </article>
           <article class="tarjeta">
-            <figure class="tarjeta__imagen"><img src="../assets/images/users/adhrian/adhrian.jpg" alt="alt"/></figure>
+            <figure class="tarjeta__imagen"><img src="assets/images/users/adhrian/adhrian.jpg" alt="alt"/></figure>
             <h3 class="title__card">Adhrian</h3><a class="subtitle__card" href="https://www.instagram.com/adrh023">@adrh023</a><a class="button__link--user" href="adhrian.html">Ver Perfil</a>
           </article>
           <article class="tarjeta">
-            <figure class="tarjeta__imagen"><img src="../assets/images/users/mirella/mirella.jpg" alt="alt"/></figure>
+            <figure class="tarjeta__imagen"><img src="assets/images/users/mirella/mirella.jpg" alt="alt"/></figure>
             <h3 class="title__card">Mirella</h3><a class="subtitle__card" href="https://www.instagram.com/papita_121">@papita_121</a><a class="button__link--user" href="mirella.html">Ver Perfil</a>
           </article>
         </section>
