nuevo orden en el apartdado de blogs

--- a/blogs.html
+++ b/blogs.html
@@ -48,8 +48,14 @@
             <figure class="caja__imagen"><img src="assets/images/anuncios_blog/blog4.jpg" alt="foto del articulo:blog4.jpg"/></figure>
             <div class="caja__contenido">
               <figure class="caja__usuario"><img src="assets/images/users/kiara/kiara.jpg" alt="alt"/></figure>
-              <h3 class="title__card">Story time de viejes 😳</h3>
+              <h3 class="title__card">Story time de viajes 😳</h3>
               <p>Weno me presento soy kiArA, hablare de algunos sucesos que me pasaron de algunos viajes que paso...</p>
+            </div></a><a class="caja" href="undefined">
+            <figure class="caja__imagen"><img src="assets/images/anuncios_blog/blog5.jpg" alt="foto del articulo:blog5.jpg"/></figure>
+            <div class="caja__contenido">
+              <figure class="caja__usuario"><img src="assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
+              <h3 class="title__card">¿Caras de Pixar?</h3>
+              <p>¿Te has preguntado como serias en un dibujo de pixar?</p>
             </div></a>
         </div>
       </section>
