agregando blog6 y blog7

--- a/blog5.html
+++ b/blog5.html
@@ -50,7 +50,7 @@
             <p>ehhhh, mana, tas bien??, parece que han dibujado en plena ataque xd, okno</p>
             <h3 class="bloque__title">Kiara</h3>
             <figure class="bloque__image"><img src="assets/images/anuncios_blog/blog5/fb6.jpg"></figure>
-            <p>No se ustedes, pero a mí me hace acordar a una de las hijas de Grud, jajajaja.</p>
+            <p>No se ustedes, pero a mí me hace acordar a una de las hijas de Gru, jajajaja.</p>
             <h3 class="bloque__title">Sagasti xd</h3>
             <figure class="bloque__image"><img src="assets/images/anuncios_blog/blog5/fb7.jpg"></figure>
             <p>Obvimente no tenia que dejar de lado a este man, solo mirenlo se ve empoderado </p><br>
