--- a/blogs.html
+++ b/blogs.html
@@ -50,12 +50,24 @@
               <figure class="caja__usuario"><img src="assets/images/users/kiara/kiara.jpg" alt="alt"/></figure>
               <h3 class="title__card">Story time de viajes 😳</h3>
               <p>Weno me presento soy kiArA, hablare de algunos sucesos que me pasaron de algunos viajes que paso...</p>
-            </div></a><a class="caja" href="undefined">
+            </div></a><a class="caja" href="blog5.html">
             <figure class="caja__imagen"><img src="assets/images/anuncios_blog/blog5.jpg" alt="foto del articulo:blog5.jpg"/></figure>
             <div class="caja__contenido">
               <figure class="caja__usuario"><img src="assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
               <h3 class="title__card">¿Caras de Pixar?</h3>
               <p>¿Te has preguntado como serias en un dibujo de pixar?</p>
+            </div></a><a class="caja" href="blog6.html">
+            <figure class="caja__imagen"><img src="assets/images/anuncios_blog/blog6.jpg" alt="foto del articulo:blog6.jpg"/></figure>
+            <div class="caja__contenido">
+              <figure class="caja__usuario"><img src="assets/images/users/adhrian/adhrian.jpg" alt="alt"/></figure>
+              <h3 class="title__card">Mano!, Loki está reintenso</h3>
+              <p>Mañana sale el siguiente episodio pero creo que ya fue la línea temporal. Literal van a hacer a lo &quot;volver al futuro&quot;</p>
+            </div></a><a class="caja" href="blog7.html">
+            <figure class="caja__imagen"><img src="assets/images/anuncios_blog/blog7.jpg" alt="foto del articulo:blog7.jpg"/></figure>
+            <div class="caja__contenido">
+              <figure class="caja__usuario"><img src="assets/images/users/alexandro/alexandro.jpg" alt="alt"/></figure>
+              <h3 class="title__card">La Copa América</h3>
+              <p>oficialmente Conmebol Copa América, es el principal torneo internacional oficial de fútbol masculino en América del Sur.</p>
             </div></a>
         </div>
       </section>
