--- a/blog5.html
+++ b/blog5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name = "description" content = "La pagina web de los panas mas facheros facheritos xd."> 
-    <title>Cerro House || Oficial</title>
+    <title>Cerro House || Oficial Page</title>
     <link rel="shortcut icon" href="assets/icons/mountain.png" type="image/png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&amp;family=Roboto:wght@700&amp;display=swap" rel="stylesheet">
