entrada blog8 carrera el siglo

--- a/blogs.html
+++ b/blogs.html
@@ -69,6 +69,12 @@
               <figure class="caja__usuario"><img src="assets/images/users/alexandro/alexandro.jpg" alt="alt"/></figure>
               <h3 class="title__card">La Copa América</h3>
               <p>oficialmente Conmebol Copa América, es el principal torneo internacional oficial de fútbol masculino en América del Sur.</p>
+            </div></a><a class="caja" href="blog8.html">
+            <figure class="caja__imagen"><img src="assets/images/anuncios_blog/blog8.jpg" alt="foto del articulo:blog8.jpg"/></figure>
+            <div class="caja__contenido">
+              <figure class="caja__usuario"><img src="assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
+              <h3 class="title__card">La carrera del siglo</h3>
+              <p>¿Crees que eres competencia para nosotros?</p>
             </div></a>
         </div>
       </section>
